--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
     <script>
         var video = document.getElementById('video');
-        var videoSrc = 'video/i/';
+        var videoSrc = 'video/i/video.m3u8';
         if (Hls.isSupported()) {
             var hls = new Hls();
             hls.loadSource(videoSrc);
